updated sframework core module to support async initialization in services

--- a/Runtime/SFramework.Configs.Runtime.asmdef
+++ b/Runtime/SFramework.Configs.Runtime.asmdef
@@ -2,7 +2,8 @@
     "name": "SFramework.Configs.Runtime",
     "rootNamespace": "SFramework.Configs.Runtime",
     "references": [
-        "SFramework.Core.Runtime"
+        "SFramework.Core.Runtime",
+        "UniTask"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
