--- a/Editor/SFramework.Configs.Editor.asmdef
+++ b/Editor/SFramework.Configs.Editor.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "SFramework.Configs.Runtime",
         "SFramework.Core.Runtime",
-        "SFramework.Core.Editor"
+        "SFramework.Core.Editor",
+        "Unity.Addressables.Editor"
     ],
     "includePlatforms": [
         "Editor"
