removed addressables dependencies

--- a/Editor/SFramework.Configs.Editor.asmdef
+++ b/Editor/SFramework.Configs.Editor.asmdef
@@ -4,8 +4,7 @@
     "references": [
         "SFramework.Configs.Runtime",
         "SFramework.Core.Runtime",
-        "SFramework.Core.Editor",
-        "Unity.Addressables.Editor"
+        "SFramework.Core.Editor"
     ],
     "includePlatforms": [
         "Editor"
